fix: Sets learner text to left align on small screens

--- a/src/app/modules/learning/knowledge-component/knowledge-component.component.css
+++ b/src/app/modules/learning/knowledge-component/knowledge-component.component.css
@@ -4,6 +4,12 @@
   margin: auto;
 }
 
+@media (max-width: 520px) {
+  #knowledge-component {
+    text-align: left;
+  }
+}
+
 h1 {
   font-weight: normal;
 }
